...
    <EditText
        android:fontFamily="sans-serif"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="20dp"
        android:background="@drawable/edittextlight"
        android:id="@+id/username"
        android:hint="Username"
        android:textSize="15sp"
        android:singleLine="false" />

    <Button
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:textColor="#ffffff"
            android:layout_marginTop="10dp"
            android:background="@drawable/edittextdark"
            android:text="LOG  IN"
            android:onClick=""
            android:id="@+id/login"
            android:fontFamily="sans-serif-light"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="#616161"
        android:text="New User? Sign Up"
        android:id="@+id/newUser"
        android:layout_gravity="center_horizontal"
        android:clickable="true"
        android:textSize="13sp" />

</LinearLayout>
