...
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:paddingLeft="12dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextlight"
        android:layout_gravity="center"
        android:id="@+id/edit_userName"
        android:hint="Name"
        android:textSize="15sp" />

    <EditText
        android:fontFamily="sans-serif-light"
        android:layout_width="250dp"
...
        android:layout_height="50dp"
        android:textColor="#ffffff"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittextdark"
        android:text="SAVE"
        android:onClick=""
        android:id="@+id/edit_userSubmit"
        android:fontFamily="sans-serif-light"
        android:layout_gravity="center"
        android:textSize="15sp" />

</LinearLayout>
